responsev part two

--- a/index.html
+++ b/index.html
@@ -328,7 +328,13 @@
   <!-- Start Imgs  -->
   <div class="imgs">
     <div class="img-box">
-      <img src="imgs/personal.jpg" alt="">
+      <img src="imgs/personal5.jpg" alt="">
+      <div class="img-overlay">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde deleniti cumque minus laudantium? Earum adipisci quos esse blanditiis est voluptas.</p>
+      </div>
+    </div>
+    <div class="img-box">
+      <img src="imgs/personal2.jpg" alt="">
       <div class="img-overlay">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde deleniti cumque minus laudantium? Earum adipisci quos esse blanditiis est voluptas.</p>
       </div>
@@ -340,19 +346,13 @@
       </div>
     </div>
     <div class="img-box">
-      <img src="imgs/personal.jpg" alt="">
+      <img src="imgs/personal5.jpg" alt="">
       <div class="img-overlay">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde deleniti cumque minus laudantium? Earum adipisci quos esse blanditiis est voluptas.</p>
       </div>
     </div>
     <div class="img-box">
-      <img src="imgs/personal.jpg" alt="">
-      <div class="img-overlay">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde deleniti cumque minus laudantium? Earum adipisci quos esse blanditiis est voluptas.</p>
-      </div>
-    </div>
-    <div class="img-box">
-      <img src="imgs/personal.jpg" alt="">
+      <img src="imgs/personal3.jpg" alt="">
       <div class="img-overlay">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde deleniti cumque minus laudantium? Earum adipisci quos esse blanditiis est voluptas.</p>
       </div>
