add nice hover on navbarlinks & change main color

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="icon" href="imgs/travel-icon.jpg" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -107,7 +108,7 @@
     <!-- Start As Features  -->
 
     <!-- Start swim  -->
-    <div class="swim">
+    <div class="swim" data-aos="zoom-in">
       <div class="container">
         <div class="swim-img">
           <img src="imgs/swim.jpg" alt="" />
@@ -138,7 +139,7 @@
       </div>
     </div>
 
-    <div class="swim">
+    <div class="swim" data-aos="zoom-in">
       <div class="container">
         <div class="swim-img">
           <img src="imgs/spa.jpg" alt="" />
@@ -169,7 +170,7 @@
       </div>
     </div>
 
-    <div class="swim">
+    <div class="swim" data-aos="zoom-in">
       <div class="container">
         <div class="swim-img">
           <img src="imgs/beach.jpg" alt="" />
@@ -200,7 +201,7 @@
       </div>
     </div>
 
-    <div class="swim">
+    <div class="swim" data-aos="zoom-in">
       <div class="container">
         <div class="swim-img">
           <img src="imgs/thailands-markets.jpg" alt="" />
@@ -231,7 +232,7 @@
       </div>
     </div>
 
-    <div class="swim">
+    <div class="swim" data-aos="zoom-in">
       <div class="container">
         <div class="swim-img">
           <img src="imgs/magic.jpg" alt="" />
@@ -262,7 +263,7 @@
       </div>
     </div>
 
-    <div class="swim">
+    <div class="swim" data-aos="zoom-in">
       <div class="container">
         <div class="swim-img">
           <img src="imgs/cooking.jpg" alt="" />
@@ -293,7 +294,7 @@
       </div>
     </div>
 
-    <div class="swim">
+    <div class="swim" data-aos="zoom-in">
       <div class="container">
         <div class="swim-img">
           <img src="imgs/home.jpg" alt="" />
@@ -324,7 +325,7 @@
       </div>
     </div>
 
-    <div class="swim">
+    <div class="swim" data-aos="zoom-in">
       <div class="container">
         <div class="swim-img">
           <img src="imgs/pinuble.jpg" alt="" />
@@ -355,7 +356,7 @@
       </div>
     </div>
 
-    <div class="swim">
+    <div class="swim" data-aos="zoom-in">
       <div class="container">
         <div class="swim-img">
           <img src="imgs/tree.jpg" alt="" />
@@ -495,6 +496,7 @@
       </div>
     </footer>
     <!-- End Footer  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/all.js"></script>
     <script src="js/code.js"></script>
   </body>
