Add Padding On Last activities Section

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             </p>
           </a>
           <hr />
-          <div class="activities">
+          <div class="activities last">
             <span class="view">0 views</span>
             <span class="comment">Write a comment</span>
             <p class="like">
